--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 blog_homepage:
     path:     /
     defaults: { _controller: BlogBundle:Default:index }
+
+blog_yazi_ekle:
+    path:     /yazi-ekle
+    defaults: { _controller: BlogBundle:Default:yaziEkle }
