like eklıyor ama goruntulemede sorunlar var

--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -19,3 +19,7 @@ blog_yorum_sil:
     path:     /{id}/yorum-sil
     defaults: { _controller: BlogBundle:Default:yorumSil }
 
+blog_yazi_begen:
+    path:     /{id}/yazi-begen
+    defaults: { _controller: BlogBundle:Default:yaziBegen }
+
